# list-combinators

./: COPYING  Data-List-Combinator.hs  README.md  data-list-combinator.cabal  fold.lhs  lcbench  lcbench.hs  list-combinators.cabal  list.hs
Data/List/: Combinator.hs
