-- The name of the package.
name:                list-combinators

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Data.List replacement with little recursion

-- A longer description of the package.
description:

    This WIP project is a replacement for Data.List that uses
    as little recursion as reasonably possible. The intent is
    to be correct, to have performance vaguely comparable with
    the old implementation, and to be maximally productive.

-- URL for the project homepage or repository.
homepage:            http://github.com/BartMassey/list-combinators

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        COPYING

-- The package author(s).
author:              Bart Massey

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          bart.massey@gmail.com

-- A copyright notice.
copyright:           Copyright © 2012 Bart Massey

category:            Data

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

Source-repository head
    type:            git
    location:        http://github.com/BartMassey/list-combinators.git

Source-repository this
    type:            git
    location:        http://github.com/BartMassey/list-combinators.git
    tag:             v0.1

library
  -- Modules exported by the library.
  exposed-modules:     Data.List.Combinator
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*
  
