name:                list-combinators

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Data.List replacement with little recursion

description:

    This WIP project is a replacement for Data.List that uses
    as little recursion as reasonably possible. The intent is
    to be correct, to have performance vaguely comparable with
    the old implementation, and to be maximally productive.

homepage:            http://github.com/BartMassey/list-combinators

license:             BSD3

license-file:        COPYING

author:              Bart Massey

maintainer:          bart.massey@gmail.com

copyright:           Copyright © 2012 Bart Massey

category:            Data

build-type:          Simple

cabal-version:       >=1.8

Source-repository head
    type:            git
    location:        http://github.com/BartMassey/list-combinators.git

Source-repository this
    type:            git
    location:        http://github.com/BartMassey/list-combinators.git
    tag:             v0.1

library
  exposed-modules:     Data.List.Combinator
  build-depends:       base ==4.5.*
  
executable lcbench
  main-is:             lcbench.hs
  build-depends:       base ==4.5.*, criterion ==0.6.*,
                       deepseq ==1.3.*, list-combinators
